<?xml version="1.0"?>
<package>
  <name>bulletsim</name>
  <version>0.0.0</version>
  <description>The bulletsim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ban-masa@todo.todo">ban-masa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/bulletsim</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>eigen3</build_depend>
  <!--  <build_depend>openrave</build_depend> -->
  <build_depend>openthreads</build_depend>
  <build_depend>openscenegraph</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roscpp_traits</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>bulletsim_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>eigen3</run_depend>
  <!-- <run_depend>openrave</run_depend> -->
  <run_depend>openthreads</run_depend>
  <run_depend>openscenegraph</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cpp_common</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>roscpp_traits</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>bulletsim_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
